--- a/ThinkLikeSmart/ThinkLikeSmart.Droid/Properties/AndroidManifest.xml
+++ b/ThinkLikeSmart/ThinkLikeSmart.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="tls.thinklikesmart">
 	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="24" />
-	<application android:label="@string/app_name" android:icon="@drawable/icon"></application>
+	<application 
+        android:label="@string/app_name" 
+        android:icon="@drawable/icon"
+        android:theme="@style/ThinkLikeSmart">        
+    </application>
 </manifest>
