--- a/ThinkLikeSmart/ThinkLikeSmart.iOS/Info.plist
+++ b/ThinkLikeSmart/ThinkLikeSmart.iOS/Info.plist
@@ -18,8 +18,6 @@
 	<array>
 		<integer>1</integer>
 	</array>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -42,5 +40,7 @@
 	<string>Resources/Images.xcassets/LaunchImage.launchimage</string>
 	<key>XSAppIconAssets</key>
 	<string>Resources/Images.xcassets/AppIcons.appiconset</string>
+	<key>UIMainStoryboardFile</key>
+	<string>Login</string>
 </dict>
 </plist>
