--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,6 @@ Thumbs.db
 local.properties
 /ThinkLikeSmart/ThinkLikeSmart.Droid/Assets/AboutAssets.txt
 /ThinkLikeSmart/ThinkLikeSmart.Droid/Resources/AboutResources.txt
-/ThinkLikeSmart/ThinkLikeSmart.Droid/Resources/Resource.designer.cs
+*.designer.cs
 .vs
 /packages
