--- a/ThinkLikeSmart/ThinkLikeSmart.iOS/Info.plist
+++ b/ThinkLikeSmart/ThinkLikeSmart.iOS/Info.plist
@@ -41,7 +41,7 @@
 	<key>XSAppIconAssets</key>
 	<string>Resources/Images.xcassets/AppIcons.appiconset</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Login</string>
+	<string>LoginStoryboard</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleLocalizations</key>
