--- a/ThinkLikeSmart/ThinkLikeSmart.Droid/ThinkLikeSmart.Droid.csproj
+++ b/ThinkLikeSmart/ThinkLikeSmart.Droid/ThinkLikeSmart.Droid.csproj
@@ -51,7 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activities\LogoActivity.cs" />
-    <Compile Include="Activities\LoginActivity.cs" />
+    <Compile Include="Activities\Authentication\LoginActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
