--- a/ThinkLikeSmart/ThinkLikeSmart.Common/ThinkLikeSmart.Common.csproj
+++ b/ThinkLikeSmart/ThinkLikeSmart.Common/ThinkLikeSmart.Common.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Presenters\Authentication\LoginPresenter.cs" />
     <Compile Include="Presenters\BasePresenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\VisibliltyMode.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
