change bg for login button to vector

--- a/ThinkLikeSmart/ThinkLikeSmart.iOS/ThinkLikeSmart.iOS.csproj
+++ b/ThinkLikeSmart/ThinkLikeSmart.iOS/ThinkLikeSmart.iOS.csproj
@@ -106,13 +106,7 @@
     <ImageAsset Include="Resources\Images.xcassets\AppIcons.appiconset\Icon-Small@3x.png">
       <InProject>false</InProject>
     </ImageAsset>
-    <ImageAsset Include="Resources\Images.xcassets\button-background-pressed.imageset\bg_button_p.png">
-      <InProject>false</InProject>
-    </ImageAsset>
     <ImageAsset Include="Resources\Images.xcassets\button-background-pressed.imageset\Contents.json">
-      <InProject>false</InProject>
-    </ImageAsset>
-    <ImageAsset Include="Resources\Images.xcassets\button-background.imageset\bg_button.png">
       <InProject>false</InProject>
     </ImageAsset>
     <ImageAsset Include="Resources\Images.xcassets\button-background.imageset\Contents.json">
@@ -157,6 +151,12 @@
     <ImageAsset Include="Resources\Images.xcassets\tab-bg.imageset\Contents.json">
       <InProject>false</InProject>
     </ImageAsset>
+    <ImageAsset Include="Resources\Images.xcassets\button-background-pressed.imageset\button_background_pressed.pdf">
+      <InProject>false</InProject>
+    </ImageAsset>
+    <ImageAsset Include="Resources\Images.xcassets\button-background.imageset\button_background.pdf">
+      <InProject>false</InProject>
+    </ImageAsset>
   </ItemGroup>
   <ItemGroup>
     <ITunesArtwork Include="Resources\ITunesArtwork" />
@@ -189,9 +189,10 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="ViewControllers\Authentication\LoginViewController.cs" />
-    <Compile Include="ViewControllers\Authentication\LoginViewController.designer.cs">
-      <DependentUpon>LoginViewController.cs</DependentUpon>
-    </Compile>
+    <Compile Include="ViewControllers\Authentication\LoginViewController.designer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewControllers\Authentication\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
