--- a/ThinkLikeSmart/ThinkLikeSmart.iOS/ThinkLikeSmart.iOS.csproj
+++ b/ThinkLikeSmart/ThinkLikeSmart.iOS/ThinkLikeSmart.iOS.csproj
@@ -170,7 +170,6 @@
     </InterfaceDefinition>
     <BundleResource Include="Resources\en.lproj\Localizable.strings" />
     <BundleResource Include="Resources\ko.lproj\Localizable.strings" />
-    <BundleResource Include="Resources\ru.lproj\Localizable.strings" />
     <BundleResource Include="Resources\zh-Hans.lproj\Localizable.strings" />
     <BundleResource Include="Resources\zh-Hant.lproj\Localizable.strings" />
     <BundleResource Include="Resources\en.lproj\LoginStoryboard~iphone.strings" />
@@ -183,6 +182,7 @@
     <BundleResource Include="Resources\ru.lproj\LoginStoryboard~ipad.strings" />
     <BundleResource Include="Resources\zh-Hans.lproj\LoginStoryboard~ipad.strings" />
     <BundleResource Include="Resources\zh-Hant.lproj\LoginStoryboard~ipad.strings" />
+    <BundleResource Include="Resources\ru.lproj\Localizable.strings" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Storage\IosSettings.cs" />
@@ -191,8 +191,6 @@
     <Compile Include="ViewControllers\Authentication\LoginViewController.cs" />
     <Compile Include="ViewControllers\Authentication\LoginViewController.designer.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewControllers\Authentication\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
