added new ResourcesProvidder interface for geting resources from native srorages, create namtive interface implementation for two platforms

--- a/ThinkLikeSmart/ThinkLikeSmart.Common/ThinkLikeSmart.Common.csproj
+++ b/ThinkLikeSmart/ThinkLikeSmart.Common/ThinkLikeSmart.Common.csproj
@@ -34,6 +34,7 @@
     <Compile Include="Factories\IStrategiesFactory.cs" />
     <Compile Include="Factories\StrategiesFactory.cs" />
     <Compile Include="Presenters\Authentication\LoginType.cs" />
+    <Compile Include="Storage\IResourcesProvider.cs" />
     <Compile Include="Storage\ISettings.cs" />
     <Compile Include="Strategies\Authentication\ILoginStrategy.cs" />
     <Compile Include="Strategies\Authentication\LoginViaEmailStrategy.cs" />
